--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             display:flex;
             flex-direction: column;
             flex-grow:1;
+            overflow-y:auto;
         }
         .chatbox{
             display: flex;
