--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             if(e.key=="Enter") postmessage();
         })
 
-        loadmessages();
+        loadmessages(true);
         load.addEventListener("click",loadmessages);
     </script>
     <style>
